--- a/src/components/common/Spinner.css
+++ b/src/components/common/Spinner.css
@@ -11,10 +11,10 @@
   font-size: 10px;
   position: relative;
   text-indent: -9999em;
-  border-top: 1.1em solid rgba(255, 151, 0, 0.2);
-  border-right: 1.1em solid rgba(255, 151, 0, 0.2);
-  border-bottom: 1.1em solid rgba(255, 151, 0, 0.2);
-  border-left: 1.1em solid #ff9700;
+  border-top: 1.1em solid rgba(217, 213, 208, 0.2);
+  border-right: 1.1em solid rgba(213, 209, 202, 0.2);
+  border-bottom: 1.1em solid rgba(246, 238, 227, 0.2);
+  border-left: 1.1em solid #0080FF;
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
