--- a/src/index.css
+++ b/src/index.css
@@ -218,10 +218,10 @@ div.alert-danger {
 }
 
 .loyaltyLogos {
-  height: 3.5rem;
-  width: 5rem;
+  height: 2.5rem;
+  width: 4.5rem;
   object-fit: contain;
-  border: 1px solid var(--light-blue);
+  border: 1px solid var(--light-gray);
   padding: 5px;
   border-radius: 10px;
 }
