--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -21,77 +21,36 @@
 
 #loginForm {
   background-color: rgba(210, 237, 246, 0.6);
-  padding: 3rem;
-  border-radius: 30px;
+  border-radius: 10px;
   text-align: center;
   box-shadow: 0 0 5px gray;
-  width: clamp(20rem, 33vw, 27rem);
+  width: clamp(15rem, 100vw, 25rem);
+  margin: 10px;
 }
 
 #loginForm h1 {
   color: var(--color-blue);
   border-bottom: 2px solid var(--superlightColor);
-  font-size: clamp(2rem, 5vw, 2.5rem);
 }
 
 #socialLogin {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: clamp(10rem, 50vw, 20rem);
-  /* height: clamp(1.5rem, 5vh, 3rem); */
 }
 
-#socialLogin * {
-  width: clamp(10rem, 50vw, 20rem);
-  height: clamp(1.5rem, 5vh, 3rem);
-  margin-bottom: 5px;
-}
-
-#googleLogin {
-  display: flex;
-  justify-content: center;
-  background-color: rgba(234, 67, 53);
-  text-align: center;
-  border: none;
-  border-radius: 5px;
-}
-
-#facebookLogin {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(60, 88, 156);
-  border: none;
-  border-radius: 5px;
-}
-
-#linkedIn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(10, 102, 194);
-  border: none;
-  border-radius: 5px;
-}
-
-#googleIcon,
-#facebookIcon,
-#linkedinIcon {
-  color: white;
-  /* size: 0.3rem; */
+#socialLogin button:hover {
+  transform: scale(1.01);
 }
 
 #loginOr {
   text-align: center;
+  font-size: 1.2rem;
   color: var(--color-blue);
 }
 
 #userAndPwdForm {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 #userAndPwdForm svg {
@@ -99,42 +58,38 @@
   justify-self: center;
 }
 
+.login-form-group {
+  display: flex;
+  border: 1px solid var(--light-gray);
+  background-color: white;
+  padding-left: 10px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
 .userAndPwdInput {
   border: none;
   border-radius: 5px;
   padding: 10px;
+  min-width: 78%;
 }
 
 .loginLabels {
-  margin: 0;
-  padding: 0;
   font-size: 1.9rem;
-  color: var(--mainColor);
+  color: var(--color-blue);
   padding-right: 10px;
-  border-right: 1px solid var(--superlightColor);
+  border-right: 1px solid var(--light-gray);
 }
 
 #loginSubmit {
-  width: clamp(10rem, 50vw, 20rem);
-  height: clamp(1.5rem, 5vh, 3rem);
-  margin-top: 15px;
+  margin-top: 10px;
   padding: 10px;
-}
-
-.login-form-group {
-  display: flex;
-  border: 1px solid var(--lighterColor);
-  background-color: white;
-  padding-left: 10px;
-  border-radius: 5px;
-  width: 20rem;
-  margin-bottom: 10px;
 }
 
 #togglePwd {
   margin-left: auto;
   margin-right: 10px;
   cursor: pointer;
-  color: var(--mainColor);
+  color: var(--color-blue);
   font-size: 1.3rem;
 }
