--- a/src/index.css
+++ b/src/index.css
@@ -302,12 +302,12 @@ form {
 
 #cardFilterContainer {
   display: flex;
-  box-shadow: 0 0 3px;
+  border: 1px solid var(--light-gray);
   border-radius: 10px;
 }
 
-#cardFilterLabel {
-  width: clamp(8rem, 10rem, 20rem);
+#cardFilterUserSelect {
+  width: clamp(9rem, 11rem, 20rem);
   padding: 10px;
   background-color: rgb(210, 237, 246);
   border-radius: 10px 0 0 10px;
@@ -317,6 +317,6 @@ form {
 #cardFilterInput {
   border: none;
   flex: 1;
-  border-radius: 10px;
+  border-radius: 0 10px 10px 0;
   padding-left: 10px;
 }
