--- a/src/index.css
+++ b/src/index.css
@@ -377,3 +377,35 @@ input[type="search"]::-webkit-search-cancel-button {
   cursor: pointer;
   background-color: var(--black-opacity);
 }
+
+#cardholderImg {
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+  border: 2px solid gray;
+}
+
+.cardholderDataSection {
+  display: flex;
+  flex-direction: column;
+  margin: 0 1.5rem 0 0;
+  background-color: rgb(243, 240, 240);
+  padding: 5px 8px;
+  border-radius: 10px;
+}
+
+.cardholderDataSection * {
+  margin: 0;
+}
+
+.dataTableTd {
+  width: min(14rem, 12rem);
+}
+
+.dataTableDataSection {
+  display: flex;
+  justify-content: space-between;
+  font-size: 12px;
+  color: gray;
+  text-align: center;
+}
