--- a/src/index.css
+++ b/src/index.css
@@ -378,7 +378,7 @@ input[type="search"]::-webkit-search-cancel-button {
   background-color: var(--black-opacity);
 }
 
-#cardholderImg {
+.cardholderImg {
   height: 4rem;
   width: 4rem;
   border-radius: 50%;
