--- a/src/index.css
+++ b/src/index.css
@@ -211,12 +211,35 @@ div.alert-danger {
 }
 
 #cardBody,
-#loyaltyCardBody,
-#cardholderCardBody {
+#loyaltyCardBody {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding: 10px;
+}
+
+#cardholderCardBody {
+  display: flex;
+  flex-direction: column;
+  padding: 5px 20px 15px 20px;
+  margin-top: 40px;
+}
+
+.cardholderCardTitle {
+  padding: 15px 0 15px 10px;
+  border-radius: 10px;
+  margin: 0;
+  text-decoration: bold;
+  display: flex;
+  justify-content: center;
+  height: 4rem;
+}
+
+#cardholderCardName {
+  text-align: center;
+  margin: 10px 0 20px 11px;
+  color: var(--color-blue);
+  font-size: 18px;
 }
 
 #cardBody:hover {
@@ -388,7 +411,6 @@ input[type="search"]::-webkit-search-cancel-button {
 .cardholderDataSection {
   display: flex;
   flex-direction: column;
-  margin: 0 1.5rem 0 0;
   background-color: rgb(243, 240, 240);
   padding: 5px 8px;
   border-radius: 10px;
@@ -404,24 +426,20 @@ input[type="search"]::-webkit-search-cancel-button {
 
 .dataTableDataSection {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   font-size: 12px;
   color: gray;
   text-align: center;
 }
 
-.largeImg {
-  height: inherit;
-  width: 10rem;
-  border-radius: 10px;
-  border: 2px solid gray;
-  background-color: var(--light-gray);
-}
-
-.smallImg {
+.cardholderCardImg {
   height: 6rem;
   width: 6rem;
-  border-radius: 10px;
+  border-radius: 50%;
   align-self: center;
-  border: 2px solid gray;
+  border: 2px solid var(--light-gray);
+  position: absolute;
+  margin-top: 100px;
+  margin-bottom: 50px;
+  padding: 2px;
 }
