--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
 .loyaltyContainer,
 .cardDetailsContainer,
 .cardHoldersContainer {
-  max-width: 1000px;
+  max-width: 1100px;
   margin: 0 auto;
 }
 
@@ -218,6 +218,15 @@ div.alert-danger {
   padding: 10px;
 }
 
+.loyaltyCardTitle {
+  padding: 5px;
+  border-radius: 10px;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 #cardholderCardBody {
   display: flex;
   flex-direction: column;
@@ -282,8 +291,9 @@ div.alert-danger {
   width: 4.5rem;
   object-fit: contain;
   border: 1px solid var(--light-gray);
-  padding: 5px;
+  padding: 3px;
   border-radius: 10px;
+  background-color: var(--black-opacity);
 }
 
 form {
