--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,9 @@ body {
   padding: 0;
   margin-bottom: 10px;
   min-height: 3rem;
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
 
 #smallNavTopHeader {
