--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --color-blue: #0080ff;
   --light-gray: #d9d7d7;
   --light-blue: rgb(210, 237, 246);
+  --bonus-info-container-bkgrd: gray;
   --black-opacity: rgba(0, 0, 0, 0.09);
   --edit-color-green: #198754;
   --url-white-bkgrd: url("https://i.imgur.com/zF8fZ5k.jpg");
@@ -281,10 +282,7 @@ div.alert-danger {
 #cardCardContainer {
   display: flex;
   flex-wrap: wrap;
-}
-
-#cardCardContainer > * {
-  margin: 7px;
+  gap: 22px;
 }
 
 .editDeleteOnCards {
@@ -539,8 +537,11 @@ p {
 .bonusInfoContainer {
   display: flex;
   padding: 5px;
-  border-radius: 15px 0 0 15px;
-  min-width: 8.2rem;
+  border-radius: 15px 15px 0 15px;
+  min-width: 8.5rem;
+  background-color: var(--bonus-info-container-bkgrd);
+  position: absolute;
+  right: -14px;
 }
 
 .bonusInfoTextSection {
@@ -548,3 +549,21 @@ p {
   flex-direction: column;
   justify-content: center;
 }
+
+.cardCard::before {
+  position: absolute;
+  content: "";
+  background-color: gray;
+  height: 28px;
+  width: 28px;
+  top: 37px;
+  right: -7.5px;
+  transform: rotate(51deg);
+  z-index: -1;
+}
+
+/* 
+- Bonus info container dynamic background color.
+- Fix the bonus earn container in card table? absolute values are throwing it off
+- Style the card details page properly
+*/
