--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body {
 .loyaltyContainer,
 .cardDetailsContainer,
 .cardHoldersContainer {
-  max-width: 1100px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
@@ -592,4 +592,16 @@ p {
 .linkDisabled {
   pointer-events: none;
   cursor: default;
+}
+
+.referralCardHeader {
+  display: flex;
+  justify-content: space-between;
+}
+
+.referralCardHeader a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-size: 15px;
 }
