--- a/src/index.css
+++ b/src/index.css
@@ -288,12 +288,13 @@ div.alert-danger {
   padding: 0 10px 0 0;
 }
 
+.cardsCardFooter {
+  display: flex;
+  justify-content: space-between;
+}
+
 .editDeleteOnCards {
-  padding: 10px 5px 10px 0;
-  width: 100%;
-  background-color: var(--black-opacity);
   text-align: right;
-  border-radius: 0 0 5px 5px;
 }
 
 .issuerLogos {
@@ -460,11 +461,6 @@ input[type="search"]::-webkit-search-cancel-button {
   text-align: center;
 }
 
-.cardholderFooter {
-  background-color: var(--light-blue);
-  border-radius: 0;
-}
-
 .image-upload {
   position: absolute;
   width: 2.1rem;
@@ -610,4 +606,10 @@ p {
 .flexAndVerticalCenter {
   display: flex;
   align-items: center;
+}
+
+.card-footer {
+  padding: 7px 5px 7px 12px;
+  align-items: center;
+  /* background: var(--black-opacity); */
 }
