fix movile margin issues

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,8 @@ body {
   margin-bottom: 1rem;
 }
 
-.cardDetailsBodyTablet {
+.cardDetailsBodyTablet,
+.cardDetailsBodyMobile {
   margin-right: 10px;
 }
 
