--- a/src/index.css
+++ b/src/index.css
@@ -581,6 +581,16 @@ p {
   z-index: -1;
 }
 
+.cardCard {
+  width: 20rem;
+}
+
+@media (max-width: 700px) {
+  .cardCard {
+    width: 100vw;
+  }
+}
+
 .cardDetailsBody #cardDetailsCard::before {
   position: absolute;
   content: "";
