style the favorites tab

--- a/src/index.css
+++ b/src/index.css
@@ -222,6 +222,18 @@ div.alert-danger {
   font-weight: bold;
 }
 
+.nav-tabs .nav-item:last-child .nav-link {
+  background-color: rgba(184, 51, 44, 0.3);
+  color: rgb(184, 51, 44);
+  border-bottom: 2px solid rgb(184, 51, 44);
+}
+
+.nav-tabs .nav-item:last-child .nav-link.active {
+  background-color: rgb(184, 51, 44);
+  color: white;
+  font-weight: bold;
+}
+
 .tableHeader > svg {
   cursor: pointer;
 }
