--- a/src/index.css
+++ b/src/index.css
@@ -259,6 +259,11 @@ div.alert-danger {
   box-shadow: 1px 1px 2px black;
 }
 
+.heart {
+  font-size: 2.5rem;
+  margin-right: 5px;
+}
+
 #cardBody,
 #loyaltyCardBody {
   display: flex;
