--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --color-blue: #0080ff;
   --light-gray: #d9d7d7;
   --light-blue: rgb(210, 237, 246);
+  --fav-red: rgb(184, 51, 44);
   --bonus-info-container-bkgrd: "";
   --black-opacity: rgba(0, 0, 0, 0.09);
   --edit-color-green: #198754;
@@ -175,9 +176,52 @@ nav a {
   font-weight: bold;
 }
 
+.cardsDropDownContainer {
+  margin-bottom: 10px;
+}
+
 .cardsDropDownContainer .labels {
   background-color: var(--light-blue);
   color: var(--color-blue);
+}
+
+#cardFilterContainer {
+  display: flex;
+  border: 1px solid var(--light-gray);
+  border-radius: 10px;
+  margin-bottom: 12px;
+}
+
+#cardFilterUserSelect {
+  width: clamp(9rem, 11rem, 20rem);
+  padding: 10px;
+  background-color: rgb(210, 237, 246);
+  border-radius: 10px 0 0 10px;
+  color: var(--color-blue);
+}
+
+#cardFilterInput {
+  border: none;
+  flex: 1;
+  border-radius: 0 10px 10px 0;
+  padding-left: 10px;
+}
+
+.cardByDropDownFavButton {
+  background-color: white;
+  color: var(--fav-red);
+  border: 1px solid var(--fav-red);
+  width: 100%;
+  font-weight: bold;
+}
+
+.cardsByDropDownHeart {
+  color: var(--fav-red);
+  font-size: 2.5rem;
+  position: absolute;
+  right: 1px;
+  transform: rotate(16deg);
+  top: 186px;
 }
 
 .field input,
@@ -224,12 +268,12 @@ div.alert-danger {
 
 .nav-tabs .nav-item:last-child .nav-link {
   background-color: rgba(184, 51, 44, 0.3);
-  color: rgb(184, 51, 44);
-  border-bottom: 2px solid rgb(184, 51, 44);
+  color: var(--fav-red);
+  border-bottom: 2px solid var(--fav-red);
 }
 
 .nav-tabs .nav-item:last-child .nav-link.active {
-  background-color: rgb(184, 51, 44);
+  background-color: var(--fav-red);
   color: white;
   font-weight: bold;
 }
@@ -417,27 +461,6 @@ form {
 #five24AccordionHeader .accordion-button {
   font-size: 0.9rem;
   background-color: var(--black-opacity);
-}
-
-#cardFilterContainer {
-  display: flex;
-  border: 1px solid var(--light-gray);
-  border-radius: 10px;
-}
-
-#cardFilterUserSelect {
-  width: clamp(9rem, 11rem, 20rem);
-  padding: 10px;
-  background-color: rgb(210, 237, 246);
-  border-radius: 10px 0 0 10px;
-  color: var(--color-blue);
-}
-
-#cardFilterInput {
-  border: none;
-  flex: 1;
-  border-radius: 0 10px 10px 0;
-  padding-left: 10px;
 }
 
 .cardTabsFilterInput {
