--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,6 @@ body {
 }
 
 .navContainer {
-  background-color: var(--color-blue);
   padding: 0;
   margin-bottom: 10px;
   min-height: 3rem;
@@ -115,7 +114,7 @@ body {
 
 nav a {
   text-decoration: none;
-  color: white;
+  color: black;
   margin-left: 1rem;
   margin-right: 1rem;
   padding: 5px 10px;
