--- a/src/index.css
+++ b/src/index.css
@@ -396,7 +396,7 @@ div.alert-danger {
 #cardCardContainer {
   display: flex;
   flex-wrap: wrap;
-  gap: 15px;
+  gap: 20px;
   padding: 0 10px 0 0;
 }
 
@@ -583,6 +583,8 @@ input[type="search"]::-webkit-search-cancel-button {
   flex-direction: column;
   background-color: rgb(243, 240, 240);
   border-radius: 10px;
+  padding: 7px;
+  min-width: clamp(10rem, 15vw, 15rem);
 }
 
 .cardholderDataSection * {
