--- a/src/index.css
+++ b/src/index.css
@@ -299,7 +299,7 @@ nav a {
   margin: 15px 0;
 }
 
-.responsiveForm .formFieldContainer {
+.singleColumnForm .formFieldContainer {
   margin: 24px 0;
 }
 
